# LeadHunter

./: .gitignore  Cargo.toml  README.md  WW Guide 3-25-1.docx  WW Guide 3-25-1.txt  system_prompt.txt
frontend/: contentScript.js  manifest.json  popup.html  popup.js
src/: apify_call.rs  extractor.rs  gpt.rs  llama.rs  lmstudio.rs  main.rs  ollama.rs  parse_json.rs  pinecone_service.rs
