[package]
name = "intern_copilot"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
serde_json = "1.0"
colored = "2.0"
owo-colors = "4.2.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
thiserror = "2.0.12"
anyhow = "1.0"
once_cell = "1.21.3"


